# pytest-bdd-html

./: .gitignore  ARCHITECTURE.adoc  CHANGELOG.adoc  CONTRIBUTING.adoc  LICENSE  Makefile  README.adoc  README.rst  coverage.cfg  pyproject.toml  setup.py  tox.ini
.github/workflows/: codeql.yml  python-publish-testing.yml  python-publish.yml  python-test.yml
docs/: contributing.adoc  contributing.rst
helpers/: format-log  gen-tags
pytest_bdd_html/: __init__.py  plugin.py
pytest_bdd_html/resources/: style.css
tests/: conftest.py  faker.py  feature.py  html_report.py  plugin_test_file.py  stylesheet.py  test_plugin.py
