[build-system]
build-backend = "setuptools.build_meta"
requires = [
  # XXX must pin to exactly this to be able to do pip install -e .
  "setuptools==65.5.1",
]

[project]
authors = [{ name = "slavos1", email = "slavos1@example.com" }]
version = "0.1.14a0"
# https://pythonhosted.org/an_example_pypi_project/setuptools.html#classifiers
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pytest>=5.0,!=6.0.0",
  "pytest-metadata",
  "pytest-bdd",
  "pytest-html",
]
description = "pytest plugin to display BDD info in HTML test report"
keywords = ["pytest", "html", "bdd", "report"]
license = { text = "MIT" }
name = "pytest-bdd-html"
readme = "README.rst"
requires-python = ">=3.7"
urls = { Homepage = "https://github.com/slavos1/pytest-bdd-html", Documentation = "https://github.com/slavos1/pytest-bdd-html/blob/main/README.rst" }

[project.entry-points."pytest11"]
bdd-html = "pytest_bdd_html.plugin"

[tool.setuptools]
include-package-data = true
packages = ["pytest_bdd_html"]

[tool.setuptools.package-data]
pytest_bdd_html = ["**/*.css"]

[tool.bumpver]
commit = true
commit_message = "bump version {old_version} -> {new_version}"
current_version = "0.1.14a0"
push = false
tag = true
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"pytest_bdd_html/__init__.py" = ["{version}"]
